--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,14 @@
 			<version>1.2</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.1.Final</version>
+		</dependency>
+
+
 		<!-- Test -->
 
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
